# tg_bot_ai

./: .env.example  .env.sample  .gitignore  LICENSE  README.md  basic.py  config.py  main.py  mode.py  pyproject.toml
handlers/: __init__.py  ask.py  quiz.py  random.py  star.py  translate.py  trenager.py
prompt/: random.system.txt  random.user.txt  random_user.txt
services/: __init__.py  gpt.py  logger.py
